--- a/index.html
+++ b/index.html
@@ -26,43 +26,40 @@
             <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
             <a href="solutions.html" class="subpage-item">Solutions</a>
             <a href="vision.html" class="subpage-item">Vision</a>
-            <a href="software.html" class="subpage-item">Software</a>
+            <a href="#" class="subpage-item">Software</a>
             <a href="#" class="subpage-item">Blog</a>
          </div>
          <div class="dropdown">
             <a class="btn btn-secondary dropdown-toggle shadow-none btn-custom-color" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
-              Language
+            Language
             </a>
-          
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="#">EN</a>
-              <a class="dropdown-item" href="#">RU</a>
-              <a class="dropdown-item" href="#">RO</a>
-              <a class="dropdown-item" href="#">UA</a>
+               <a class="dropdown-item" href="#">EN</a>
+               <a class="dropdown-item" href="#">RU</a>
+               <a class="dropdown-item" href="#">RO</a>
+               <a class="dropdown-item" href="#">UA</a>
             </div>
-          </div>
+         </div>
          <div class="hamburger" id="hamburger">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
-          </div>
+         </div>
       </div>
-
       <div class="panel" id="panel">
          <div class="mobile-subpages">
             <div>
                <div class="dropdown">
-                  <a class="mobile-btn btn-secondary dropdown-toggle shadow-none btn-custom-color" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
-                    Language
+                  <a class="mobile-btn mobile-btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
+                  Language
                   </a>
-                
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="#">EN</a>
-                    <a class="dropdown-item" href="#">RU</a>
-                    <a class="dropdown-item" href="#">RO</a>
-                    <a class="dropdown-item" href="#">UA</a>
+                     <a class="dropdown-item" href="#">EN</a>
+                     <a class="dropdown-item" href="#">RU</a>
+                     <a class="dropdown-item" href="#">RO</a>
+                     <a class="dropdown-item" href="#">UA</a>
                   </div>
-                </div>
+               </div>
             </div>
             <div class="divider"></div>
             <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
@@ -71,97 +68,97 @@
             <a href="software.html" class="subpage-item">Software</a>
             <a href="#" class="subpage-item">Blog</a>
          </div>
-       </div>
+      </div>
    </header>
    <body>
       <div class="page-wrapper">
-      <section>
-         <div class="welcome">
-            <img src="img/office.png" alt="card" />
-            <div class="about">
-               <h2>Welcome</h2>
-               <p>Tech Titans is here to revolutionize the world of financial and administrative software development. With our technology and experienced professionals, we make it easy to take your business to the next level.</p>
-               <p>Get ready to experience the power of Tech Titans</p>
+         <section>
+            <div class="welcome">
+               <img src="img/office.png" alt="card" />
+               <div class="about">
+                  <h2>Welcome</h2>
+                  <p>Tech Titans is here to revolutionize the world of financial and administrative software development. With our technology and experienced professionals, we make it easy to take your business to the next level.</p>
+                  <p>Get ready to experience the power of Tech Titans</p>
+               </div>
             </div>
-         </div>
-      </section>
-      <section>
-         <div class="short-desc">
-            <p>Unlock the Power of Tech Titans'</p>
-            <p>Administrative Software</p>
-            <p>Development Services</p>
-         </div>
-         <div class="background-img">
-            <div class="background-img-inner"></div>
-         </div>
-      </section>
-      <section>
-         <div class="team">
-            <div class="content">
-               <h2><b>Our Team.</b></h2>
-               <p id="description">
-                  Our team of juniors and creators are the best of the best, a group of diverse, young, <br />
-                  ambitious minds working collaboratively to bring your wildest dreams to life.
-               </p>
+         </section>
+         <section>
+            <div class="short-desc">
+               <p>Unlock the Power of Tech Titans'</p>
+               <p>Administrative Software</p>
+               <p>Development Services</p>
             </div>
-            <div class="cards">
-               <div class="column">
-                  <div class="imageBox"><img src="img/user1.png" style="width: 100%; height: auto;" /></div>
-                  <div class="text-block-1">
-                     <h4>Name Name</h4>
-                     <p>Job Title</p>
-                  </div>
-                  <div class="imageBox"><img src="img/user2.png" style="width: 100%; height: auto;" /></div>
-                  <div class="text-block-2">
-                     <h4>Name Name</h4>
-                     <p>Job Title</p>
-                  </div>
-                  <div class="imageBox"><img src="img/user3.png" style="width: 100%; height: auto;" /></div>
-                  <div class="text-block-3">
-                     <h4>Name Name</h4>
-                     <p>Job Title</p>
-                  </div>
-                  <div class="imageBox"><img src="img/user4.png" style="width: 100%; height: auto;" /></div>
-                  <div class="text-block-4">
-                     <h4>Name Name</h4>
-                     <p>Job Title</p>
+            <div class="background-img">
+               <div class="background-img-inner"></div>
+            </div>
+         </section>
+         <section>
+            <div class="team">
+               <div class="content">
+                  <h2><b>Our Team.</b></h2>
+                  <p id="description">
+                     Our team of juniors and creators are the best of the best, a group of diverse, young, <br />
+                     ambitious minds working collaboratively to bring your wildest dreams to life.
+                  </p>
+               </div>
+               <div class="cards">
+                  <div class="column">
+                     <div class="imageBox"><img src="img/user1.png" style="width: 100%; height: auto;" /></div>
+                     <div class="text-block-1">
+                        <h4>Name Name</h4>
+                        <p>Job Title</p>
+                     </div>
+                     <div class="imageBox"><img src="img/user2.png" style="width: 100%; height: auto;" /></div>
+                     <div class="text-block-2">
+                        <h4>Name Name</h4>
+                        <p>Job Title</p>
+                     </div>
+                     <div class="imageBox"><img src="img/user3.png" style="width: 100%; height: auto;" /></div>
+                     <div class="text-block-3">
+                        <h4>Name Name</h4>
+                        <p>Job Title</p>
+                     </div>
+                     <div class="imageBox"><img src="img/user4.png" style="width: 100%; height: auto;" /></div>
+                     <div class="text-block-4">
+                        <h4>Name Name</h4>
+                        <p>Job Title</p>
+                     </div>
                   </div>
                </div>
             </div>
-         </div>
-      </section>
-      <section class="directions">
-         <div class="our-directions">
-            <p>Our direction and promising</p>
-            <p>areas of development</p>
-         </div>
-         <div class="text-cards">
-            <div class="text-block-5">
-               <p>
-                  FINANCIAL<br />
-                  SOFTWARE
-               </p>
+         </section>
+         <section class="directions">
+            <div class="our-directions">
+               <p>Our direction and promising</p>
+               <p>areas of development</p>
             </div>
-            <img src="img/financial.png" alt="" />
-            <div class="text-block-6">
-               <p>
-                  ADMINISTRATIVE<br />
-                  SOFTWARE
-               </p>
+            <div class="text-cards">
+               <div class="text-block-5">
+                  <p>
+                     FINANCIAL<br />
+                     SOFTWARE
+                  </p>
+               </div>
+               <img src="img/financial.png" alt="" />
+               <div class="text-block-6">
+                  <p>
+                     ADMINISTRATIVE<br />
+                     SOFTWARE
+                  </p>
+               </div>
+               <img src="img/technical.png" alt="" />
+               <div class="text-block-7">
+                  <p>
+                     GAMING<br />
+                     DEVELOPMENT
+                  </p>
+               </div>
             </div>
-            <img src="img/technical.png" alt="" />
-            <div class="text-block-7">
-               <p>
-                  GAMING<br />
-                  DEVELOPMENT
-               </p>
+            <div class="read-more">
+               <p>Read more about our solution in <u>Solution</u> and <u>Vision</u> tabs.</p>
             </div>
-         </div>
-         <div class="read-more">
-            <p>Read more about our solution in <u>Solution</u> and <u>Vision</u> tabs.</p>
-         </div>
-      </section>
-   </div>
+         </section>
+      </div>
    </body>
    <footer>
       <div class="footer-wrapper">
@@ -171,9 +168,9 @@
          </div>
          <div class="footer-section" id="buttons">
             <div class="href-buttons">
-               <a href="#" class="footer-button">Solutions</a>
-               <a href="#" class="footer-button">Services</a>
-               <a href="#" class="footer-button">About us</a>
+               <a href="solutions.html" class="footer-button">Solutions</a>
+               <a href="solutions.html" class="footer-button">Services</a>
+               <a href="vision.html" class="footer-button">About us</a>
                <a href="#" class="footer-button">Blog</a>
                <div class="footer-button">
                </div>
@@ -184,7 +181,7 @@
          <div class="footer-section" id="social">
             <p>Follow Us On:</p>
             <div class="social-icons">
-            <i class="fab fa-linkedin"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i>
+               <i class="fab fa-linkedin"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i>
             </div>
             <span class="footer-info">© 2022 Tech Titans. All rights reserved.</span>
          </div>
