--- a/vision.html
+++ b/vision.html
@@ -26,41 +26,49 @@
             <a href="index.html" class="subpage-item">Home</a>
             <a href="solutions.html" class="subpage-item">Solutions</a>
             <a href="#" class="subpage-item" style="color: #729fce;">Vision</a>
-            <a href="software.html" class="subpage-item">Software</a>
+            <a href="#" class="subpage-item">Software</a>
             <a href="#" class="subpage-item">Blog</a>
          </div>
          <div class="dropdown">
             <a class="btn btn-secondary dropdown-toggle shadow-none btn-custom-color" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
-              Language
+            Language
             </a>
-          
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="#">EN</a>
-              <a class="dropdown-item" href="#">RU</a>
-              <a class="dropdown-item" href="#">RO</a>
-              <a class="dropdown-item" href="#">UA</a>
+               <a class="dropdown-item" href="#">EN</a>
+               <a class="dropdown-item" href="#">RU</a>
+               <a class="dropdown-item" href="#">RO</a>
+               <a class="dropdown-item" href="#">UA</a>
             </div>
-          </div>
+         </div>
          <div class="hamburger" id="hamburger">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
-          </div>
+         </div>
       </div>
-
       <div class="panel" id="panel">
          <div class="mobile-subpages">
             <div>
-               <button class="mobile-header-button">Language</button>
+               <div class="dropdown">
+                  <a class="mobile-btn mobile-btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
+                  Language
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                     <a class="dropdown-item" href="#">EN</a>
+                     <a class="dropdown-item" href="#">RU</a>
+                     <a class="dropdown-item" href="#">RO</a>
+                     <a class="dropdown-item" href="#">UA</a>
+                  </div>
+               </div>
             </div>
             <div class="divider"></div>
             <a href="index.html" class="subpage-item">Home</a>
             <a href="solutions.html" class="subpage-item">Solutions</a>
             <a href="#" class="subpage-item" style="color: #729fce;">Vision</a>
-            <a href="software.html" class="subpage-item">Software</a>
+            <a href="#" class="subpage-item">Software</a>
             <a href="#" class="subpage-item">Blog</a>
          </div>
-       </div>
+      </div>
    </header>
    <body>
       <div class="page-wrapper">
@@ -140,9 +148,9 @@
          </div>
          <div class="footer-section" id="buttons">
             <div class="href-buttons">
-               <a href="#" class="footer-button">Solutions</a>
-               <a href="#" class="footer-button">Services</a>
-               <a href="#" class="footer-button">About us</a>
+               <a href="solutions.html" class="footer-button">Solutions</a>
+               <a href="solutions.html" class="footer-button">Services</a>
+               <a href="vision.html" class="footer-button" style="color: #729fce;">About us</a>
                <a href="#" class="footer-button">Blog</a>
                <div class="footer-button">
                </div>
