--- a/vision.html
+++ b/vision.html
@@ -50,14 +50,14 @@
          <div class="mobile-subpages">
             <div>
                <div class="dropdown">
-                  <a class="mobile-btn mobile-btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
-                  Language
+                  <a class="mobile-btn mobile-btn-secondary dropdown-toggle " href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
+                     <img src="img/globe.png" alt="Lang" /> 
                   </a>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                     <a class="dropdown-item" href="#">EN</a>
-                     <a class="dropdown-item" href="#">RU</a>
-                     <a class="dropdown-item" href="#">RO</a>
-                     <a class="dropdown-item" href="#">UA</a>
+                     <a class="dropdown-item" href="#"><img src="img/gb.svg" width="20" height="15" alt="">  English</a>
+               <a class="dropdown-item" href="#"><img src="img/ru.svg" width="20" height="15" alt="">  Russian</a>
+               <a class="dropdown-item" href="#"><img src="img/md.svg" width="20" height="15" alt="">  Romanian</a>
+               <a class="dropdown-item" href="#"><img src="img/ua.svg" width="20" height="15" alt="">  Ukrainian</a>
                   </div>
                </div>
             </div>
