--- a/contact-us.html
+++ b/contact-us.html
@@ -3,8 +3,13 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>      
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
       <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
       <link rel="stylesheet" href="css/contact-us.css" />
       <link rel="stylesheet" href="css/header.css" />
@@ -26,14 +31,15 @@
          </div>
          <div class="dropdown">
             <a class="btn btn-secondary dropdown-toggle shadow-none btn-custom-color" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
-            Language
+               <img src="img/globe.png" alt="Lang" /> 
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-               <a class="dropdown-item" href="#">EN</a>
-               <a class="dropdown-item" href="#">RU</a>
-               <a class="dropdown-item" href="#">RO</a>
-               <a class="dropdown-item" href="#">UA</a>
+               <a class="dropdown-item" href="#"><img src="img/gb.svg" width="20" height="15" alt="">  English</a>
+               <a class="dropdown-item" href="#"><img src="img/ru.svg" width="20" height="15" alt="">  Russian</a>
+               <a class="dropdown-item" href="#"><img src="img/md.svg" width="20" height="15" alt="">  Romanian</a>
+               <a class="dropdown-item" href="#"><img src="img/ua.svg" width="20" height="15" alt="">  Ukrainian</a>
             </div>
+         </div>
          </div>
          <div class="hamburger" id="hamburger">
             <span class="bar"></span>
